<resources>
    <string name="app_name">Maahi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="menu_my_transation">My transation</string>
    <string name="menu_my_subscription">My subscription</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contect_us">Contact Us</string>
    <string name="menu_terms_condition">Terms &amp; Condition</string>
    <string name="menu_private_policy">Private Policy</string>
    <string name="menu_changecity">Change City</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>