<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"

            android:title="@string/menu_my_profile" />
        <item
            android:id="@+id/nav_slideshow"

            android:title="@string/menu_my_cart" />
        <item
            android:id="@+id/nav_my_transation"

            android:title="@string/menu_my_transation" />
        <item
            android:id="@+id/nav_my_subscription"

            android:title="@string/menu_my_subscription" />
        <item
            android:id="@+id/nav_about_us"

            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_contact_us"

            android:title="@string/menu_contect_us" />
        <item
            android:id="@+id/nav_terms_condition"

            android:title="@string/menu_terms_condition" />
        <item
            android:id="@+id/nav_privacy_policy"

            android:title="@string/menu_private_policy" />
        <item
            android:id="@+id/nav_change_city"

            android:title="@string/menu_changecity" />
        <item
            android:id="@+id/nav_Logout"
            android:title="@string/menu_logout"/>
    </group>
</menu>