<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.amul.Home"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.example.amul.MyProfile"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.amul.MyCart"
        android:label="@string/menu_my_cart"
        tools:layout="@layout/fragment_my_cart" />

    <fragment
        android:id="@+id/nav_my_transation"
        android:name="com.example.amul.MyTransation"
        android:label="@string/menu_my_transation"
        tools:layout="@layout/fragment_my_transation" />

    <fragment
        android:id="@+id/nav_my_subscription"
        android:name="com.example.amul.MySubscription"
        android:label="@string/menu_my_subscription"
        tools:layout="@layout/fragment_my_subscription" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.amul.AboutUs"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.amul.ContectUs"
        android:label="@string/menu_contect_us"
        tools:layout="@layout/fragment_contect_us" />

    <fragment
        android:id="@+id/nav_terms_condition"
        android:name="com.example.amul.TermsConditon"
        android:label="@string/menu_terms_condition"
        tools:layout="@layout/fragment_terms_conditon" />

    <fragment
        android:id="@+id/nav_privacy_policy"
        android:name="com.example.amul.PrivacyPolicy"
        android:label="@string/menu_private_policy"
        tools:layout="@layout/fragment_privacy_policy" />

    <fragment
        android:id="@+id/nav_change_city"
        android:name="com.example.amul.ChangeCity"
        android:label="@string/menu_changecity"
        tools:layout="@layout/fragment_change_city" />

    <fragment
        android:id="@+id/nav_Logout"
        android:name="com.example.amul.Logout"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />


</navigation>